kubernetes/argocd/apps/workloads/chrisabel/manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: chrisabel
spec:
  selector:
    app: chrisabel
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
