kubernetes/argocd/apps/workloads/chrisabel/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrisabel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "chrisabel.love"
      http:
        paths:
          - backend:
              service:
                name: chrisabel
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - chrisabel.love
      secretName: chrisabel-love-tls
